ADD_SUBDIRECTORY (HvProcess/Charge/${HVPROCESS_CHG})
ADD_SUBDIRECTORY (HvProcess/DisCharge/${HVPROCESS_DCHG})
ADD_SUBDIRECTORY (ChargerComm/${COMMPROTOCOL_CHG})
ADD_SUBDIRECTORY (VcuComm/${COMMPROTOCOL_VCU})

FILE (GLOB THIS_DIR_SRC "*.c" "*.h")
SET (SOURCE_FILES ${SOURCE_FILES} ${THIS_DIR_SRC} PARENT_SCOPE)
SET (INCUDE_DIRS  ${INCUDE_DIRS} ${CMAKE_CURRENT_LIST_DIR} PARENT_SCOPE)
